[gd_scene load_steps=8 format=3 uid="uid://bugpfxrl8ucqo"]

[ext_resource type="Script" uid="uid://scmkuywj6wbi" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/PauseMenu.gd" id="1_yrhi2"]
[ext_resource type="FontFile" uid="uid://bvn3wtsegknv" path="res://fonts/MineMouseRegular-BL3DB.ttf" id="2_fx88v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fx88v"]
bg_color = Color(0.3764706, 0.26666668, 0, 0.47843137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tarj"]
bg_color = Color(0.3764706, 0.26666668, 0, 0.47843137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g57nt"]
bg_color = Color(0.3764706, 0.26666668, 0, 0.47843137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ul640"]
bg_color = Color(0.3764706, 0.26666668, 0, 0.47843137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5fw0"]
bg_color = Color(0.3764706, 0.26666668, 0, 0.47843137)

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_yrhi2")

[node name="OpenSettingsButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 68.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.914, 0.753, 0.459, 0.969)
theme_override_fonts/font = ExtResource("2_fx88v")
theme_override_styles/normal = SubResource("StyleBoxFlat_fx88v")
text = "| |"

[node name="MenuOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4392157)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -154.0
offset_right = 82.5
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="MenuOverlay/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.9137255, 0.7529412, 0.45882353, 0.96862745)
theme_override_fonts/font = ExtResource("2_fx88v")
theme_override_styles/normal = SubResource("StyleBoxFlat_2tarj")
text = "Resume"

[node name="QuestsButton" type="Button" parent="MenuOverlay/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.9137255, 0.7529412, 0.45882353, 0.96862745)
theme_override_fonts/font = ExtResource("2_fx88v")
theme_override_styles/normal = SubResource("StyleBoxFlat_g57nt")
text = "Quests"

[node name="OptionsButton" type="Button" parent="MenuOverlay/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.9137255, 0.7529412, 0.45882353, 0.96862745)
theme_override_fonts/font = ExtResource("2_fx88v")
theme_override_styles/normal = SubResource("StyleBoxFlat_ul640")
text = "Options"

[node name="SaveExitButton" type="Button" parent="MenuOverlay/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.9137255, 0.7529412, 0.45882353, 0.96862745)
theme_override_fonts/font = ExtResource("2_fx88v")
theme_override_styles/normal = SubResource("StyleBoxFlat_v5fw0")
text = "Save And Exit"
